--- a/online-tutoring-backend/administration-service/pom.xml
+++ b/online-tutoring-backend/administration-service/pom.xml
@@ -71,6 +71,11 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>cognitoidentityprovider</artifactId>
         </dependency>
+<dependency>
+    <groupId>com.vladmihalcea</groupId>
+    <artifactId>hibernate-types-55</artifactId>
+    <version>2.18.0</version>
+</dependency>
 	</dependencies>
 	 <dependencyManagement>
         <dependencies>
