--- a/online-tutoring-backend/administration-service/src/main/resources/application.properties
+++ b/online-tutoring-backend/administration-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.batch_size=5
 spring.jpa.hibernate.ddl-auto=validate
 logging.level.root=INFO
 logging.level.com.adminservice=DEBUG
