--- a/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
+++ b/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 server.port=8088
 student.bucket.name=pills210822
-questionpaper.bucket.name=shiksha-questionpapers.8474b189
 kubernetes.profile=N
 spring.datasource.url=jdbc:mysql://localhost:3307/shikshadb?user=testpass&password=testpass&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-questionpaper.queue.name=shiksha-questionpapers_sqs
+restapi.mdm.url=http://localhost:8090/
