--- a/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
+++ b/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ student.bucket.name=pills210822
 kubernetes.profile=N
 spring.datasource.url=jdbc:mysql://localhost:3307/shikshadb?user=testpass&password=testpass&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 restapi.mdm.url=http://localhost:8090/
+questionpaper.bucket.name=shiksha-questionpapers.bd56cd3a
+questionpaper.queue.name=shiksha-questionpapers_sqs
