--- a/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
+++ b/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:mysql://localhost:3307/shikshadb?user=testpass&passwo
 restapi.mdm.url=http://localhost:8090/
 questionpaper.bucket.name=shiksha-questionpapers.bd56cd3a
 questionpaper.queue.name=shiksha-questionpapers_sqs
+spring.jpa.show-sql=true
