--- a/online-tutoring-backend/spring-cloud-api-gateway/pom.xml
+++ b/online-tutoring-backend/spring-cloud-api-gateway/pom.xml
@@ -78,6 +78,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+				<image>
+					<name>pavithravasudevan/spring-cloud-gateway:${project.version}</name>
+				</image>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
