--- a/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
+++ b/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
@@ -3,6 +3,10 @@ student.bucket.name=pills210822
 kubernetes.profile=N
 spring.datasource.url=jdbc:mysql://localhost:3307/shikshadb?user=testpass&password=testpass&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 restapi.mdm.url=http://localhost:8090/
-questionpaper.bucket.name=shiksha-questionpapers.bd56cd3a
+questionpaper.bucket.name=shiksha-questionpapers.bf56ce00
 questionpaper.queue.name=shiksha-questionpapers_sqs
+answersheet.bucket.name=shiksha-answersheets.612efef2
+answersheet.queue.name=shiksha-answersheets_sqs
 spring.jpa.show-sql=true
+spring.cloud.aws.s3.region=us-east-1
+mail.address.from=a.pavithraa@gmail.com
