--- a/online-tutoring-backend/administration-service/src/main/resources/application.properties
+++ b/online-tutoring-backend/administration-service/src/main/resources/application.properties
@@ -6,11 +6,11 @@ logging.level.root=INFO
 logging.level.com.adminservice=DEBUG
 server.port=8090
 kubernetes.profile=N
-jwt.aws.userPoolId=us-east-1_DUfDYLnmA
+jwt.aws.userPoolId=us-east-1_d7gTXDzXK
 jwt.aws.region=us-east-1
-cognito.app.clientid=7sopkguq2mmi4vf7dhnet51kjn
+cognito.app.clientid=4d0rspobol474rft7nq57krjjq
 student.group.name=Student
-teacher.group.name=Pills
+teacher.group.name=Teacher
 logging.level.org.springframework.security=DEBUG
 #spring.datasource.url=jdbc:mysql://host.docker.internal:3307/shikshadb?user=testpass&password=testpass&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.url=jdbc:mysql://localhost:3307/shikshadb?user=testpass&password=testpass&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
