--- a/online-tutoring-backend/student-assessment-service/pom.xml
+++ b/online-tutoring-backend/student-assessment-service/pom.xml
@@ -88,6 +88,10 @@
             <groupId>io.awspring.cloud</groupId>
             <artifactId>spring-cloud-aws-starter-sqs</artifactId>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sts</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
