--- a/online-tutoring-frontend/package.json
+++ b/online-tutoring-frontend/package.json
@@ -8,7 +8,9 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "@mui/styled-engine-sc": "^5.9.3",
-    "@mui/x-date-pickers": "^5.0.2",
+    "@mui/x-date-pickers": "latest",
+    "date-fns": "latest",
+    "dayjs": "latest",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "6.4",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
     "styled-components": "^5.3.5",
