--- a/online-tutoring-backend/administration-service/pom.xml
+++ b/online-tutoring-backend/administration-service/pom.xml
@@ -69,6 +69,10 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>sts</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>cognitoidentityprovider</artifactId>
         </dependency>
         <dependency>
