--- a/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
+++ b/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8088
 student.bucket.name=pills210822
 kubernetes.profile=N
 spring.datasource.url=jdbc:mysql://localhost:3307/shikshadb?user=testpass&password=testpass&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-=http://localhost:8090/
+restapi.mdm.url=http://localhost:8090/
 questionpaper.bucket.name=shiksha-questionpapers.bf56ce00
 questionpaper.queue.name=shiksha-questionpapers_sqs
 answersheet.bucket.name=shiksha-answersheets.612efef2
