--- a/online-tutoring-frontend/package.json
+++ b/online-tutoring-frontend/package.json
@@ -9,13 +9,14 @@
     "@mui/material": "^5.9.3",
     "@mui/styled-engine-sc": "^5.9.3",
     "@mui/x-date-pickers": "latest",
-    "date-fns": "latest",
-    "dayjs": "latest",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "amazon-cognito-identity-js": "^5.2.4",
     "axios": "^0.27.2",
+    "date-fns": "latest",
+    "dayjs": "latest",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
