--- a/infra/EKS/kubernetes_manifests/ingress-resource.yaml
+++ b/infra/EKS/kubernetes_manifests/ingress-resource.yaml
@@ -10,8 +10,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     # Health Check Settings
     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
-    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
-    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health 
+    alb.ingress.kubernetes.io/healthcheck-port: traffic-port    
     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
     alb.ingress.kubernetes.io/success-codes: '200'
@@ -38,4 +37,14 @@ spec:
                 name: apigateway
                 port: 
                   number: 9090
-  
+    - host: monitoring.saaralkaatru.com
+      http:
+        paths:                      
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: kube-prometheus-stack-grafana
+                port: 
+                  number: 80
+         
