--- a/online-tutoring-backend/student-assessment-service/pom.xml
+++ b/online-tutoring-backend/student-assessment-service/pom.xml
@@ -82,6 +82,10 @@
         </dependency>
         <dependency>
             <groupId>io.awspring.cloud</groupId>
+            <artifactId>spring-cloud-aws-starter-dynamodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.awspring.cloud</groupId>
             <artifactId>spring-cloud-aws-starter-ses</artifactId>
         </dependency>
         <dependency>
