--- a/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
+++ b/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
@@ -10,3 +10,4 @@ answersheet.queue.name=shiksha-answersheets_sqs
 spring.jpa.show-sql=true
 spring.cloud.aws.s3.region=us-east-1
 mail.address.from=a.pavithraa@gmail.com
+dynamodb.table.name=StudentNotification
