--- a/online-tutoring-backend/spring-cloud-api-gateway/pom.xml
+++ b/online-tutoring-backend/spring-cloud-api-gateway/pom.xml
@@ -81,7 +81,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<image>
-						<name>pavithravasudevan/spring-cloud-gateway:${project.version}</name>
+						<name>pavithravasudevan/${project.artifactId}:${project.version}</name>
 					</image>
 				</configuration>
 			</plugin>
