--- a/infra/EKS/shiksha-helm-chart/templates/mdm.yaml
+++ b/infra/EKS/shiksha-helm-chart/templates/mdm.yaml
@@ -3,8 +3,7 @@ kind: ConfigMap
 metadata:
   name: mdm-config
 data:  
-    spring.datasource.url: jdbc:mysql://mysql.default.svc.cluster.local:{{.Values.ports.mysql}}/shikshadb?user=testpass&password=testpass&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
-    
+    spring.datasource.url: jdbc:mysql://{{.Values.dbConnectionStringParams.serviceName}}.default.svc.cluster.local:{{.Values.ports.mysql}}/{{.Values.dbConnectionStringParams.dbName}}?user={{.Values.dbConnectionStringParams.userName}}&password={{.Values.dbConnectionStringParams.password}}&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false    
     AWS_REGION: {{.Values.aws.region}}
     kubernetes.profile: "Y"
     jwt.aws.userPoolId: {{.Values.aws.cognito.userPoolId}}
@@ -29,7 +28,7 @@ spec:
       labels:
         app: mdm
     spec:
-      serviceAccountName: cognito-access
+      serviceAccountName: {{.Values.serviceAccountName.mdm}}
       containers:
       - image: {{.Values.image.repositoryName}}/administration-service:0.0.1
         name: mdm
