--- a/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
+++ b/online-tutoring-backend/student-assessment-service/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.show-sql=true
 spring.cloud.aws.s3.region=us-east-1
 mail.address.from=a.pavithraa@gmail.com
 dynamodb.table.name=StudentNotification
+spring.flyway.baseline-on-migrate = true
+spring.profiles.active=production
