--- a/infra/EKS/shiksha-helm-chart/values.yaml
+++ b/infra/EKS/shiksha-helm-chart/values.yaml
@@ -15,6 +15,7 @@ ports:
     mdm: 8090
     assessment: 8088
     mysql: 3306
+    frontend: 80
 ingress:
   domainName: saaralkaatru.com
 serviceAccountName:
