--- a/infra/EKS/shiksha-helm-chart/templates/assessment.yaml
+++ b/infra/EKS/shiksha-helm-chart/templates/assessment.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       serviceAccountName: {{.Values.serviceAccountName.assessment}}
       containers:
-      - image: pavithravasudevan/student-assessment-service:0.0.1
+      - image: {{.Values.image.repositoryName}}/student-assessment-service:0.0.1
         name: assessment
         imagePullPolicy: Always
         envFrom:
