--- a/infra/EKS/kubernetes_manifests/frontend.yaml
+++ b/infra/EKS/kubernetes_manifests/frontend.yaml
@@ -1,57 +1,55 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: apigateway-config
+  name: frontend-config
 data:  
-    mdm_url: http://mdm.default.svc.cluster.local:8090/    
-    assessment_url: http://assessment.default.svc.cluster.local:8088/
-    jwt.aws.userPoolId: us-east-1_d7gTXDzXK
+   
     REACT_APP_CLIENT_ID: 4d0rspobol474rft7nq57krjjq
     REACT_APP_USER_POOL_ID: us-east-1_d7gTXDzXK
-    REACT_APP_SERVER_URL: shiksha.saaralkaatru.com
+    REACT_APP_SERVER_URL: https://shiksha.saaralkaatru.com/
+
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:  
   labels:
-    app: apigateway
-  name: apigateway
+    app: frontend
+  name: frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: apigateway  
+      app: frontend  
   template:
     metadata:      
       labels:
-        app: apigateway
+        app: frontend
     spec:
       
       containers:
-      - image: pavithravasudevan/spring-cloud-gateway:0.0.1
-        name: apigateway
-       
+      - image: pavithravasudevan/shiksha-frontend:0.0.1
+        name: frontend       
         envFrom:
         - configMapRef:
-            name: apigateway-config
+            name: frontend-config
        
 ---
 apiVersion: v1
 kind: Service
 metadata: 
   labels:
-    app: apigateway
-  name: apigateway
+    app: frontend
+  name: frontend
   annotations:
-    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health/readiness
+    alb.ingress.kubernetes.io/healthcheck-path: /
 spec:
   ports:
-  - name: 9090-9090
-    port: 9090
+  - name: 80-80
+    port: 80
     protocol: TCP
-    targetPort: 9090
+    targetPort: 80
   selector:
-    app: apigateway
+    app: frontend
   type: NodePort
 status:
   loadBalancer: {}
