--- a/infra/EKS/shiksha-helm-chart/templates/shiksha-frontend.yaml
+++ b/infra/EKS/shiksha-helm-chart/templates/shiksha-frontend.yaml
@@ -2,11 +2,10 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: frontend-config
-data:  
-   
+data:     
     REACT_APP_CLIENT_ID: {{.Values.aws.cognito.userPoolId}}
     REACT_APP_USER_POOL_ID: {{.Values.aws.cognito.appClientId}}
-    REACT_APP_SERVER_URL: shiksha.{{.Values.ingress.domainName}} 
+    REACT_APP_SERVER_URL: https://shiksha.{{.Values.ingress.domainName}}/
 
 ---
 apiVersion: apps/v1
@@ -28,7 +27,8 @@ spec:
       
       containers:
       - image: {{.Values.image.repositoryName}}/shiksha-frontend:0.0.1
-        name: frontend       
+        name: frontend 
+        imagePullPolicy: Always      
         envFrom:
         - configMapRef:
             name: frontend-config
