--- a/infra/03-EKS/shiksha-helm-chart/templates/api-gateway.yaml
+++ b/infra/03-EKS/shiksha-helm-chart/templates/api-gateway.yaml
@@ -3,9 +3,9 @@ kind: ConfigMap
 metadata:
   name: apigateway-config
 data:  
-    mdm_url: http://mdm.default.svc.cluster.local:8090/    
-    assessment_url: http://assessment.default.svc.cluster.local:8088/
-    jwt.aws.userPoolId: us-east-1_d7gTXDzXK
+    mdm_url: http://mdm.default.svc.cluster.local:{{.Values.ports.mdm}}/    
+    assessment_url: http://assessment.default.svc.cluster.local:{{.Values.ports.assessment}}/
+    user_pool_id: {{.Values.aws.cognito.userPoolId}}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -25,9 +25,16 @@ spec:
     spec:
       
       containers:
-      - image: pavithravasudevan/spring-cloud-gateway:0.0.1
+      - image: {{.Values.image.repositoryName}}/spring-cloud-api-gateway-unsecured:0.0.1
         name: apigateway
-       
+        resources:
+          requests:
+            memory: "600Mi"
+            cpu: "400m"
+          limits:
+            memory: "600Mi"
+            cpu: "400m"       
+        
         envFrom:
         - configMapRef:
             name: apigateway-config
@@ -44,7 +51,7 @@ metadata:
 spec:
   ports:
   - name: 9090-9090
-    port: 9090
+    port: {{.Values.ports.apigateway}}
     protocol: TCP
     targetPort: 9090
   selector:
