--- a/infra/03-EKS/kubernetes_manifests/mdm.yaml
+++ b/infra/03-EKS/kubernetes_manifests/mdm.yaml
@@ -34,6 +34,13 @@ spec:
       - image: pavithravasudevan/administration-service:0.0.1
         name: mdm
         imagePullPolicy: Always
+        resources:
+          requests:
+            memory: "700Mi"
+            cpu: "400m"
+          limits:
+            memory: "800Mi"
+            cpu: "500m"
         envFrom:
         - configMapRef:
             name: mdm-config
