--- a/infra/03-EKS/kubernetes_manifests/mdm.yaml
+++ b/infra/03-EKS/kubernetes_manifests/mdm.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: mdm-config
 data:  
-    spring.datasource.url: jdbc:mysql://mysql.default.svc.cluster.local:3306/shikshadb?user=testpass&password=testpass&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+    spring.datasource.url: jdbc:mysql://mysql:3306/shikshadb?user=testpass&password=testpass&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
     restapi.mdm.url: http://mdm:8090/
     AWS_REGION: us-east-1
     kubernetes.profile: "Y"
